Updated copyright footer

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2026 Internet Governance Resource Hub. Available under CC0 1.0 Universal License.</p>
+            <p>&copy; 2026 - Internet Governance Resource Hub. Available under CC0 1.0 Universal License.</p>
         </div>
     </footer>
 
